Add Icon to currencies. - This is a material-representation for the currency in the plugin menus.